Update Weight Activity now updates RunKeeper

--- a/Runkeeper Weight Tracker/res/values/strings.xml
+++ b/Runkeeper Weight Tracker/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="ResponseText"></string>
     <string name="SampleDate">1/1/70 12:00 AM</string>
     <string name="SampleText">150 Pounds</string>
+    <string name="AddWeight">Add Weight</string>
 </resources>
